@startuml
'https://plantuml.com/class-diagram

class Main {
    + static void main(String[] args)
}

class Car {
    - String make;
    - String model;
    - int year;
    - String bodyStyle;
    - Driver driver;

    + Car(String make, String model, int year, String bodyStyle)
    + Driver getDriver()
    + void setDriver(Driver driver)
    + String toString()
}

class Driver {
    - String name;
    - int age;

    + Driver(String name, int age)
    + String getName()
    + String setName()
    + String getAge()
    + String setAge()
    + String toString()
}

Main *-- Car
Car *-- Driver
@enduml